#18 wip: Add base footer for example

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         </main>
 
         <footer>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Accessibility</a>
             <!-- Auto-updating copyright -->
             <p class="copyright">Copyright &copy; Team 10 <span id="copyright"></span></p>
         </footer>
