test paragraph added for pr

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <section>
                 A NEW SECTION SHOULD EXIST FOR EVERY 'PAGE'
             </section>
+            <p>Hello this is a test</p>
         </main>
 
         <footer>
