#6 feat: Add accessibility policy page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <nav></nav>
         </header>
 
-        <main>
+        <main class="footer-allowance">
             <h1>THIS SHOULD MATCH YOUR TITLE IN THE HEAD</h1>
 
             <section>
@@ -49,7 +49,7 @@
 
         <footer>
             <a href="#">Privacy Policy</a>
-            <a href="#">Accessibility</a>
+            <a href="accessibility.html">Accessibility</a>
             <!-- Auto-updating copyright -->
             <p class="copyright">Copyright &copy; Team 10 <span id="copyright"></span></p>
         </footer>
