#6 #35 wip: Add to a11y page, and add basic dark mode

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <nav></nav>
         </header>
 
-        <main class="footer-allowance">
+        <main class="footer-allowance readable-width">
             <h1>THIS SHOULD MATCH YOUR TITLE IN THE HEAD</h1>
 
             <section>
@@ -53,6 +53,7 @@
             <a href="accessibility.html">Accessibility</a>
             <!-- Auto-updating copyright -->
             <p class="copyright">Copyright &copy; Team 10 <span id="copyright"></span></p>
+            <!-- Dark mode toggle switch -->
         </footer>
 
         <!-- Local scripts -->
