--- a/accessibility.html
+++ b/accessibility.html
@@ -34,7 +34,8 @@
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     </head>
 
-    <body class="a11y-page">
+    <body class="footer-page">
+        
         <header>
             <nav></nav>
         </header>
