--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <hr>
                     <li><a href="#">Resources</a></li>
                     <hr>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <hr>
                 </ul>
             </nav>
