JS added to detect browser width and update field-of-view attribute on model-viewer elements

--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
             <h1>THIS SHOULD MATCH YOUR TITLE IN THE HEAD</h1>
 
             <section id="awareness">
+                <h2 id="awareness-title">Awareness</h2>
+
                 <model-viewer
                     id="female-model-viewer"
                     auto-rotate
-                    field-of-view="20deg"
+                    field-of-view="30deg"
                     environment-image="assets/models/moonless_golf_2k.hdr"
                     alt="A 3D model of a female body's torso"
-                    shadow-intensity="1"
                     src="assets/models/fem-torso-transLights.glb">
                 </model-viewer>
                 
@@ -83,10 +84,9 @@
                 <model-viewer
                     id="male-model-viewer"
                     auto-rotate
-                    field-of-view="20deg"
+                    field-of-view="30deg"
                     environment-image="assets/models/moonless_golf_2k.hdr"
                     alt="A 3D model of a female body's torso"
-                    shadow-intensity="1"
                     src="assets/models/male-torso-transLights.glb">
                 </model-viewer>
             </section>
