h2 Awareness section title styles added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <main class="footer-allowance">
             <h1>THIS SHOULD MATCH YOUR TITLE IN THE HEAD</h1>
 
-            <section id="awareness">
+            <section id="awareness" class="section-margin">
                 <h2 id="awareness-title">Awareness</h2>
 
                 <model-viewer
