--- a/accessibility.html
+++ b/accessibility.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- Metas -->
-        <meta name="description" content="The Accessibility Policy for the PROJECT_NAME site. This page details all of the accessibility functionality available within this site.">
+        <meta name="description" content="The Accessibility Policy for the Bust IT - Cancer Without Borders site. This page details all of the accessibility functionality available within this site.">
         <meta name="keywords" content="accessibility, a11y, policy, hackathon, breast, cancer, coding, code, institute">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="canonical" href="#">
@@ -12,16 +12,16 @@
         <title>Accessibility Policy</title>
         <!-- Facebook, LinkedIn, Google -->
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="PROJECT_NAME Accessibility Policy" />
-        <meta property="og:description" content="The Accessibility Policy for the PROJECT_NAME site. This page details all of the accessibility functionality available within this site." />
+        <meta property="og:title" content="Bust IT - Cancer Without Borders Accessibility Policy" />
+        <meta property="og:description" content="The Accessibility Policy for the Bust IT - Cancer Without Borders site. This page details all of the accessibility functionality available within this site." />
         <meta name="image" property="og:image" content="assets/docs/imgs/finalsite.png" />
         <meta property="og:image:alt" content="ALT TEXT FOR IMAGE" />
         <meta property="og:url" content="PERMALINK" />
         <meta property="og:site_name" content="SITE NAME" />
         <!-- Twitter -->
         <meta name="twitter:card">
-        <meta name="twitter:title" content="PROJECT_NAME Accessibility Policy">
-        <meta name="twitter:description" content="The Accessibility Policy for the PROJECT_NAME site. This page details all of the accessibility functionality available within this site.">
+        <meta name="twitter:title" content="Bust IT - Cancer Without Borders Accessibility Policy">
+        <meta name="twitter:description" content="The Accessibility Policy for the Bust IT - Cancer Without Borders site. This page details all of the accessibility functionality available within this site.">
         <meta name="twitter:image" content="assets/docs/imgs/finalsite.png">
         <meta name="twitter:image:alt" content="ALT TEXT FOR IMAGE">
         <!-- Local stylesheets -->
@@ -35,16 +35,45 @@
     </head>
 
     <body class="footer-page">
-        
+        <!--Header section-->
         <header>
-            <nav></nav>
+            <div class="logo-spin">
+                <img src="assets/images/logo-cools.png" alt="Logo icon of all genders, rotating"></img>
+            </div>
+
+            <div class="logo">
+                <h2>Bust IT: Cancer Without Borders</h2>
+            </div>
+
+            <div class="menu-bar tap-target" onclick="openNavBar()">
+                <span class="sr-only">Open the navigation menu</span>
+                <i class="fas fa-bars fa-2x tap-target bar-icon"></i>
+            </div>
+
+            <nav class="menu" id="menu">
+                <div class="menu-bar" onclick="closeNavBar()">
+                    <i class="fas fa-times tap-target"></i>
+                </div>
+                <ul class="overlay-content">
+                    <li><a href="/index.html">Home</a></li>
+                    <hr>
+                    <li><a href="/index.html#awareness">Awareness</a></li>
+                    <hr>
+                    <li><a href="/index.html#support">Support</a></li>
+                    <hr>
+                    <li><a href="/index.html#resources">Resources</a></li>
+                    <hr>
+                    <li><a href="/index.html#contact">Contact</a></li>
+                    <hr>
+                </ul>
+            </nav>
         </header>
 
         <main class="footer-allowance readable-width">
             <h1>Accessibility Policy</h1>
 
             <section>
-                <h2>We’re PROJECT_NAME</h2>
+                <h2>We’re Bust IT - Cancer Without Borders</h2>
                 <p>
                     We believe that all our users should benefit from our website and service. We want to make sure that all our users get the service they need to get the most out of our site.
                 </p>
