Add loading attribute to model-viewer elements to load on page load with value of eager

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <model-viewer
                     id="female-model-viewer"
                     auto-rotate
+                    loading="eager"
                     field-of-view="30deg"
                     environment-image="assets/models/moonless_golf_2k.hdr"
                     alt="A 3D model of a female body's torso"
@@ -111,6 +112,7 @@
                 <model-viewer
                     id="male-model-viewer"
                     auto-rotate
+                    loading="eager"
                     field-of-view="30deg"
                     environment-image="assets/models/moonless_golf_2k.hdr"
                     alt="A 3D model of a female body's torso"
