--- a/500.html
+++ b/500.html
@@ -4,24 +4,24 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- Metas -->
-        <meta name="description" content="The 404 Page for the Bust IT: Cancer Without Borders site. Unfortunately this means that this page either does not exist, or cannot be found.">
-        <meta name="keywords" content="404, error, hackathon, breast, cancer, coding, code, institute">
+        <meta name="description" content="The 500 Page for the Bust IT: Cancer Without Borders site. Unfortunately, this means that something has gone wrong with the server.">
+        <meta name="keywords" content="500, error, hackathon, breast, cancer, coding, code, institute">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="canonical" href="#">
         <meta name="robots" content="index, follow">
-        <title>404 Error</title>
+        <title>500 Error</title>
         <!-- Facebook, LinkedIn, Google -->
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="Bust IT: Cancer Without Borders 404 Page" />
-        <meta property="og:description" content="The 404 Page for the Bust IT: Cancer Without Borders site. Unfortunately this means that this page either does not exist, or cannot be found." />
+        <meta property="og:title" content="Bust IT: Cancer Without Borders 500 Page" />
+        <meta property="og:description" content="The 500 Page for the Bust IT: Cancer Without Borders site. Unfortunately, this means that something has gone wrong with the server." />
         <meta name="image" property="og:image" content="assets/docs/imgs/finalsite.png" />
         <meta property="og:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices" />
         <meta property="og:url" content="PERMALINK" />
         <meta property="og:site_name" content="Bust IT: Cancer Without Borders" />
         <!-- Twitter -->
         <meta name="twitter:card">
-        <meta name="twitter:title" content="Bust IT: Cancer Without Borders 404 Page">
-        <meta name="twitter:description" content="The 404 Page for the Bust IT: Cancer Without Borders site. Unfortunately this means that this page either does not exist, or cannot be found.">
+        <meta name="twitter:title" content="Bust IT: Cancer Without Borders 500 Page">
+        <meta name="twitter:description" content="The 500 Page for the Bust IT: Cancer Without Borders site. Unfortunately, this means that something has gone wrong with the server.">
         <meta name="twitter:image" content="assets/docs/imgs/finalsite.png">
         <meta name="twitter:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices">
         <!-- Local stylesheets -->
@@ -66,9 +66,9 @@
 
         <main class="footer-allowance readable-width">
             <h1>
-                404 Error
+                500 Error
                 <br>
-                This page does not exist.
+                Internal server error.
             </h1>
         </main>
 
