--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- Metas -->
-        <meta name="description" content="DESCRIPTION">
+        <meta name="description" content="The Bust IT: Cancer Without Borders site, a website to raise awareness about breast gender within the transgender community.">
         <meta name="keywords" content="hackathon, breast, cancer, coding, code, institute">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="canonical" href="#">
         <meta name="robots" content="index, follow">
-        <title>SITE TITLE</title>
+        <title>Bust IT: Cancer Without Borders</title>
         <!-- Facebook, LinkedIn, Google -->
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="TITLE OF YOUR POST OR PAGE" />
-        <meta property="og:description" content="DESCRIPTION OF PAGE CONTENT" />
-        <meta name="image" property="og:image" content="URL TO IMAGE" />
-        <meta property="og:image:alt" content="ALT TEXT FOR IMAGE" />
+        <meta property="og:title" content="Bust IT: Cancer Without Borders" />
+        <meta property="og:description" content="The Bust IT: Cancer Without Borders site, a website to raise awareness about breast gender within the transgender community." />
+        <meta name="image" property="og:image" content="assets/docs/imgs/finalsite.png" />
+        <meta property="og:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices" />
         <meta property="og:url" content="PERMALINK" />
-        <meta property="og:site_name" content="SITE NAME" />
+        <meta property="og:site_name" content="Bust IT: Cancer Without Borders" />
         <!-- Twitter -->
         <meta name="twitter:card">
-        <meta name="twitter:title" content="TITLE OF POST OR PAGE">
-        <meta name="twitter:description" content="DESCRIPTION OF PAGE CONTENT">
-        <meta name="twitter:image" content="URL TO IMAGE">
-        <meta name="twitter:image:alt" content="ALT TEXT FOR IMAGE">
+        <meta name="twitter:title" content="Bust IT: Cancer Without Borders">
+        <meta name="twitter:description" content="The Bust IT: Cancer Without Borders site, a website to raise awareness about breast gender within the transgender community.">
+        <meta name="twitter:image" content="assets/docs/imgs/finalsite.png">
+        <meta name="twitter:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices">
         <!-- Local stylesheets -->
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
         <!-- Font Awesome -->
@@ -125,7 +125,7 @@
             <a href="privacy.html">Privacy Policy</a>
             <a href="accessibility.html">Accessibility</a>
             <!-- Auto-updating copyright -->
-            <p class="copyright">Copyright &copy; Team 10 <span id="copyright"></span></p>
+            <p class="copyright">Copyright &copy; Team Chat 'til Late <span id="copyright"></span></p>
             <!-- Dark mode toggle switch -->
         </footer>
 
