docs: Add wireframes to REAME.md file

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <nav class="menu" id="menu">
                 <div class="menu_bar" onclick="closeNavBar()"><i class="fas fa-times"></i></div>
                 <ul class="overlay-content">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <hr>
                     <li><a href="#">Awareness</a></li>
                     <hr>
@@ -58,7 +58,7 @@
                     <hr>
                     <li><a href="#">Resources</a></li>
                     <hr>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                     <hr>
                 </ul>
             </nav>
