--- a/resource.html
+++ b/resource.html
@@ -1,8 +1,35 @@
 <section> 
 <h1>Resoures</h1>
 
-<h2> Websites </h2>
+<article>
+    <h2>Have I got Breast Cancer?</h2>    
+    <ul>
+        <li>Signs & Symptoms</li>
+        <li>What to expect at appointments</li>
+        <li>Benign breast conditions</li>
+        <li>Breast cancer, genes and family history</li>
+        <li>Transgender people and Breast cancer</li>
+    </ul>
+    
+     <h2>Diagnosed with Breast Cancer?</h2>
+        <ul>
+            <li> Cancer grades and sizes </li>
+            <li> Prognosis </li>
+            <li> Breast cancer, genes and family history </li>
+            <li> Information for you </li>
+        </ul>
+
+        <h2>Survive and Thrive</h2>
+        <ul>
+            <li>Post treatment </li>
+           <li> Positive Living </li>
+           <li> Virtual Support Hub </li>
+           <li> LGBTQI+ Cancer Support Resources</li>
+        </ul>
+    </article>
+
 <h2> Support groups </h2>
+
 <h2> Events </h2>
 
 
