--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <h2>Bust IT: Cancer Without Borders</h2>
             </div>
 
-            <div class="menu-bar tap-target" onclick="openNavBar()" role="button">
+            <div class="menu-bar tap-target" role="button" id="nav-burger">
                 <span class="sr-only">Open the navigation menu</span>
                 <i class="fas fa-bars fa-2x tap-target bar-icon"></i>
             </div>
 
             <nav class="menu" id="menu">
-                <div class="menu-bar" onclick="closeNavBar()" role="button">
+                <div class="menu-bar" role="button" id="close-icon">
                     <i class="fas fa-times fa-2x tap-target close-icon"></i>
                 </div>
                 <ul class="overlay-content">
@@ -64,10 +64,10 @@
                 </ul>
             </nav>
         </header>
-        
+
         <!-- Main section -->
         <main id="home" class="footer-allowance">
-            <h1>Bust IT - Cancer Without Borders</h1>
+            <h1>Bust IT: Cancer Without Borders</h1>
 
             <section id="awareness" class="section-margin">
                 <h2 id="awareness-title">Awareness</h2>
