--- a/privacy.html
+++ b/privacy.html
@@ -45,21 +45,21 @@
                 <h2>Bust IT: Cancer Without Borders</h2>
             </div>
 
-            <div class="menu-bar tap-target" onclick="openNavBar()" role="button">
+            <div class="menu-bar tap-target" role="button" id="nav-burger">
                 <span class="sr-only">Open the navigation menu</span>
                 <i class="fas fa-bars fa-2x tap-target bar-icon"></i>
             </div>
 
             <nav class="menu" id="menu">
-                <div class="menu-bar" onclick="closeNavBar()" role="button">
+                <div class="menu-bar" role="button" id="close-icon">
                     <i class="fas fa-times fa-2x tap-target close-icon"></i>
                 </div>
                 <ul class="overlay-content">
-                    <li><a href="/index.html#home">Home</a></li>
-                    <li><a href="/index.html#awareness">Awareness</a></li>
-                    <li><a href="/index.html#support">Support</a></li>
-                    <li><a href="/index.html#resources">Resources</a></li>
-                    <li><a href="/index.html#contact">Contact</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#awareness">Awareness</a></li>
+                    <li><a href="#support">Support</a></li>
+                    <li><a href="#resources">Resources</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
