--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <a href="privacy.html">Privacy Policy</a>
             <a href="accessibility.html">Accessibility</a>
             <!-- Auto-updating copyright -->
-            <p class="copyright">Copyright &copy; Team Chat 'til Late <span id="copyright"></span></p>
+            <p class="copyright">Copyright &copy; Team Chat&nbsp;'til&nbsp;Late&nbsp;<span id="copyright"></span></p>
             <!-- Dark mode toggle switch -->
         </footer>
 
