Interactive section added with default content and styles

--- a/index.html
+++ b/index.html
@@ -69,8 +69,34 @@
         <main id="home" class="footer-allowance">
             <h1>Bust IT - Cancer Without Borders</h1>
 
+            <article id="user-utils">
+                <h2 id="utils-title" class="section-title">Interactive</h2>
+
+                <div class="utils-content">
+                    <p class="article-content">
+                        This website utilises interactive 3D models to break down the barrier of the human form.
+                    </p>
+                    <p class="article-content">
+                        By default, these models are non-interactive with slight rotation to support the information they pertain to.
+                        We believe in giving power to our users, so if you would like to view the 3D models in all their glory and de-mystify
+                        the human form, you can enable Interactive controls. Alternatively, if you do not like the rotation of the models, and prefer
+                        a static feel to a website, then you can also disable the rotation.
+                    </p>
+                    <p class="article-content">
+                        Keep an eye on these User Controls in the near future, more features will be added to enhance the functionality
+                        that the User has at their disposal.
+                    </p>
+                </div>
+
+                <div id="utils-controls">
+                    <p>Click to enable/disable:</p>
+                    <button class="utils-control-button" id="interactive-controls">Interactive Controls</button>
+                    <button class="utils-control-button" id="auto-rotate">Model Auto-Rotation</button>
+                </div>
+            </article>
+
             <section id="awareness" class="section-margin">
-                <h2 id="awareness-title">Awareness</h2>
+                <h2 id="awareness-title" class="section-title">Awareness</h2>
 
                 <model-viewer
                     id="female-model-viewer"
