--- a/privacy.html
+++ b/privacy.html
@@ -55,7 +55,7 @@
                     <i class="fas fa-times fa-2x tap-target close-icon"></i>
                 </div>
                 <ul class="overlay-content">
-                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#awareness">Awareness</a></li>
                     <li><a href="index.html#support">Support</a></li>
                     <li><a href="index.html#resources">Resources</a></li>
