JS added to handle on click events of rotate & interactive buttons

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <main id="home" class="footer-allowance">
             <h1>Bust IT - Cancer Without Borders</h1>
 
-            <article id="user-utils">
+            <section id="user-utils" class="section-margin">
                 <h2 id="utils-title" class="section-title">Interactive</h2>
 
-                <div class="utils-content">
+                <article class="utils-content">
                     <p class="article-content">
                         This website utilises interactive 3D models to break down the barrier of the human form.
                     </p>
@@ -86,14 +86,14 @@
                         Keep an eye on these User Controls in the near future, more features will be added to enhance the functionality
                         that the User has at their disposal.
                     </p>
-                </div>
+                </article>
 
-                <div id="utils-controls">
+                <article id="utils-controls">
                     <p>Click to enable/disable:</p>
                     <button class="utils-control-button" id="interactive-controls">Interactive Controls</button>
                     <button class="utils-control-button" id="auto-rotate">Model Auto-Rotation</button>
-                </div>
-            </article>
+                </article>
+            </section>
 
             <section id="awareness" class="section-margin">
                 <h2 id="awareness-title" class="section-title">Awareness</h2>
