--- a/resource.html
+++ b/resource.html
@@ -36,3 +36,37 @@
 
 
 </section>
+
+
+<div class="resources-grid">
+    <div>
+        <h3>Have I got Breast Cancer?</h3>
+        <ul>
+            <li>Signs & Symptoms</li>
+            <li>What to expect at appointments</li>
+            <li>Benign breast conditions</li>
+            <li>Breast cancer, genes and family history</li>
+            <li>Transgender people and Breast cancer</li>
+        </ul>
+    </div>
+
+    <div>
+        <h3>Diagnosed with Breast Cancer?</h3>
+        <ul>
+            <li> Cancer grades and sizes </li>
+            <li> Prognosis </li>
+            <li> Breast cancer, genes and family history </li>
+            <li> Information for you </li>
+        </ul>
+    </div>
+
+    <div>
+        <h3>Survive and Thrive</h3>
+        <ul>
+            <li>Post treatment </li>
+           <li> Positive Living </li>
+           <li> Virtual Support Hub </li>
+           <li> LGBTQI+ Cancer Support Resources</li>
+        </ul>
+    </div>
+</div>
