#13 ref: Refactor code layout and add missing closing tag

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <i class="fas fa-times fa-2x tap-target close-icon"></i>
                 </div>
                 <ul class="overlay-content">
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#awareness">Awareness</a></li>
                     <li><a href="#support">Support</a></li>
                     <li><a href="#resources">Resources</a></li>
@@ -67,7 +67,7 @@
 
         <!-- Main section -->
         <main id="home" class="footer-allowance">
-            <h1 class="readable-width text-center title">Bust IT - Cancer Without Borders</h1>
+            <h1 class="readable-width text-center title">Bust IT: Cancer Without Borders</h1>
 
             <section id="awareness" class="section-margin">
                 <h2 id="awareness-title">Awareness</h2>
@@ -120,8 +120,8 @@
                 </model-viewer>
             </section>
 
-            <section id="resource-section">
-                <article id="resource"  class="resources-grid">
+            <section id="resources">
+                <article id="resource" class="resources-grid">
                     <h2 id="awareness-title">Resources</h2>
                     <!-- I will change to a resource id -->
                     <div class="resources-grid">
@@ -139,24 +139,24 @@
                         <div>
                             <h3>Diagnosed with Breast Cancer?</h3>
                             <ul>
-                                <li> Cancer grades and sizes </li>
-                                <li> Prognosis </li>
-                                <li> Breast cancer, genes and family history </li>
-                                <li> Information for you </li>
+                                <li>Cancer grades and sizes</li>
+                                <li>Prognosis</li>
+                                <li>Breast cancer, genes and family history</li>
+                                <li>Information for you</li>
                             </ul>
                         </div>
                     
                         <div>
                             <h3>Survive and Thrive</h3>
                             <ul>
-                                <li>Post treatment </li>
-                               <li> Positive Living </li>
-                               <li> Virtual Support Hub </li>
-                               <li> LGBTQI+ Cancer Support Resources</li>
+                                <li>Post treatment</li>
+                                <li>Positive Living</li>
+                                <li>Virtual Support Hub</li>
+                                <li>LGBTQI+ Cancer Support Resources</li>
                             </ul>
                         </div>
                     </div>
-                 
+                </article>
             </section>
         </main>
 
@@ -165,7 +165,6 @@
             <a href="accessibility.html">Accessibility</a>
             <!-- Auto-updating copyright -->
             <p class="copyright">Copyright &copy; Team Chat&nbsp;'til&nbsp;Late&nbsp;<span id="copyright"></span></p>
-            <!-- Dark mode toggle switch -->
         </footer>
 
         <!-- External Libraries/Frameworks JS scripts -->
