--- a/privacy.html
+++ b/privacy.html
@@ -7,16 +7,16 @@
         <meta name="description" content="The Privacy Policy for the Bust IT: Cancer Without Borders site. This page details what we do with your data, and how we keep your data secure.">
         <meta name="keywords" content="hackathon, breast, cancer, coding, code, institute">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="canonical" href="#">
+        <link rel="canonical" href="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/">
         <meta name="robots" content="index, follow">
-        <title>SITE TITLE</title>
+        <title>Privacy Policy</title>
         <!-- Facebook, LinkedIn, Google -->
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Bust IT: Cancer Without Borders" />
         <meta property="og:description" content="The Privacy Policy for the Bust IT: Cancer Without Borders site. This page details what we do with your data, and how we keep your data secure." />
         <meta name="image" property="og:image" content="assets/docs/imgs/finalsite.png" />
         <meta property="og:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices" />
-        <meta property="og:url" content="PERMALINK" />
+        <meta property="og:url" content="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/" />
         <meta property="og:site_name" content="Bust IT: Cancer Without Borders" />
         <!-- Twitter -->
         <meta name="twitter:card">
