--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <i class="fas fa-times fa-2x tap-target close-icon"></i>
                 </div>
                 <ul class="overlay-content">
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#awareness-section">Awareness</a></li>
                     <li><a href="#support">Support</a></li>
                     <li><a href="#resources-section">Resources</a></li>
