--- a/accessibility.html
+++ b/accessibility.html
@@ -56,10 +56,10 @@
                 </div>
                 <ul class="overlay-content">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#awareness">Awareness</a></li>
-                    <li><a href="index.html#support">Support</a></li>
-                    <li><a href="index.html#resources">Resources</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="index.html#awareness-section">Awareness</a></li>
+                    <li><a href="index.html#support-section">Support</a></li>
+                    <li><a href="index.html#resources-section">Resources</a></li>
+                    <li><a href="index.html#contact-section">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -161,11 +161,12 @@
             <a href="privacy.html">Privacy Policy</a>
             <a href="accessibility.html">Accessibility</a>
             <!-- Auto-updating copyright -->
-            <p class="copyright">Copyright &copy; Team Chat 'til Late <span id="copyright"></span></p>
+            <p class="copyright">Copyright &copy; Team Chat&nbsp;'til&nbsp;Late&nbsp;<span id="copyright"></span></p>
         </footer>
 
         <!-- Local scripts -->
         <script src="assets/js/script.js" async></script>
+        <script src="assets/js/copyright-nav.js"></script>
     </body>
 
 </html>
