--- a/privacy.html
+++ b/privacy.html
@@ -56,62 +56,81 @@
                 </div>
                 <ul class="overlay-content">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#awareness">Awareness</a></li>
-                    <li><a href="index.html#support">Support</a></li>
-                    <li><a href="index.html#resources">Resources</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li><a href="index.html#awareness-section">Awareness</a></li>
+                    <li><a href="index.html#support-section">Support</a></li>
+                    <li><a href="index.html#resources-section">Resources</a></li>
+                    <li><a href="index.html#contact-section">Contact</a></li>
                 </ul>
             </nav>
         </header>
 
         <main class="footer-allowance readable-width">
             <h1>Privacy Policy</h1>
-            <h2>Bust IT: Cancer Without Borders</h2>
-            <p>Last updated: 13th November 2021.</p>
-            <p>Team Chat 'til Late of the Code Institute x IT Labs Breast Cancer Awareness Hackathon operate this site. This page informs you of our policies regarding the collection, use and disclosure of
-            Personal Information we receive from users of the Site.</p>
-            <p>We use your Personal Information only for providing and improving the site. By using the site, you
-            agree to the collection and use of information in accordance with this policy.</p>
+            <section>
+                <h2>Bust IT: Cancer Without Borders</h2>
+                <p>Last updated: 13th November 2021.</p>
+                <p>Team Chat 'til Late of the Code Institute x IT Labs Breast Cancer Awareness Hackathon operate this site. This page informs you of our policies regarding the collection, use and disclosure of
+                Personal Information we receive from users of the Site.</p>
+                <p>We use your Personal Information only for providing and improving the site. By using the site, you
+                agree to the collection and use of information in accordance with this policy.</p>
+            </section>
 
-            <h3>Information Collection And Use</h3>
-            <p>While using our site, we may ask you to provide us with certain personally identifiable information
-            that can be used to contact or identify you. Personally identifiable information may include, but is not
-            limited to your name ("Personal Information").</p>
+            <section>
+                <h3>Information Collection And Use</h3>
+                <p>While using our site, we may ask you to provide us with certain personally identifiable information
+                that can be used to contact or identify you. Personally identifiable information may include, but is not
+                limited to your name ("Personal Information").</p>
+            </section>
 
-            <h3>Communications</h3>
-            <p>We may use your Personal Information to contact you with newsletters, marketing or promotional
-            materials and other information that you sign up for, specifically our check yourself reminder service.</p>
-            <h3>Cookies</h3>
-            <p>Cookies are files with small amount of data, which may include an anonymous unique identifier.
-            Cookies are sent to your browser from a web site and stored on your computer's hard drive.
-            Like many sites, we use "cookies" to collect information. You can instruct your browser to refuse all
-            cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may
-            not be able to use some portions of our Site.</p>
-            <h3>Security</h3>
-            <p>The security of your Personal Information is important to us, but remember that no method of
-            transmission over the Internet, or method of electronic storage, is 100% secure. While we strive to
-            use commercially acceptable means to protect your Personal Information, we cannot guarantee its
-            absolute security.</p>
-            <h3>Changes To This Privacy Policy</h3>
-            <p>This Privacy Policy is effective as of 13th November 2021 and will remain in effect except with respect to any
-            changes in its provisions in the future, which will be in effect immediately after being posted on this
-            page.</p>
-            <p>We reserve the right to update or change our Privacy Policy at any time and you should check this
-            Privacy Policy periodically. Your continued use of the service after we post any modifications to the
-            Privacy Policy on this page will constitute your acknowledgment of the modifications and your
-            consent to abide and be bound by the modified Privacy Policy.</p>
-            <p>If we make any material changes to this Privacy Policy, we will notify you either through the email
-            address you have provided us, or by placing a prominent notice on our website.</p>
-            <h3>Contact Us</h3>
-            <p>If you have any questions about this Privacy Policy, please <a href="/index.html#contact">contact us</a>.</p>
+            <section>
+                <h3>Communications</h3>
+                <p>We may use your Personal Information to contact you with newsletters, marketing or promotional
+                materials and other information that you sign up for, specifically our check yourself reminder service.</p>
+            </section>
+
+            <section>
+                <h3>Cookies</h3>
+                <p>Cookies are files with small amount of data, which may include an anonymous unique identifier.
+                Cookies are sent to your browser from a web site and stored on your computer's hard drive.
+                Like many sites, we use "cookies" to collect information. You can instruct your browser to refuse all
+                cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may
+                not be able to use some portions of our Site.</p>
+            </section>
+
+            <section>
+                <h3>Security</h3>
+                <p>The security of your Personal Information is important to us, but remember that no method of
+                transmission over the Internet, or method of electronic storage, is 100% secure. While we strive to
+                use commercially acceptable means to protect your Personal Information, we cannot guarantee its
+                absolute security.</p>
+            </section>
+
+            <section>
+                <h3>Changes To This Privacy Policy</h3>
+                <p>This Privacy Policy is effective as of 13th November 2021 and will remain in effect except with respect to any
+                changes in its provisions in the future, which will be in effect immediately after being posted on this
+                page.</p>
+                <p>We reserve the right to update or change our Privacy Policy at any time and you should check this
+                Privacy Policy periodically. Your continued use of the service after we post any modifications to the
+                Privacy Policy on this page will constitute your acknowledgment of the modifications and your
+                consent to abide and be bound by the modified Privacy Policy.</p>
+                <p>If we make any material changes to this Privacy Policy, we will notify you either through the email
+                address you have provided us, or by placing a prominent notice on our website.</p>
+            </section>
+
+            <section>
+                <h3>Contact Us</h3>
+                <p>If you have any questions about this Privacy Policy, please <a href="/index.html#contact">contact us</a>.</p>
+            </section>
         </main>
 
         <footer>
             <a href="privacy.html">Privacy Policy</a>
             <a href="accessibility.html">Accessibility</a>
             <!-- Auto-updating copyright -->
-            <p class="copyright">Copyright &copy; Team Chat 'til Late <span id="copyright"></span></p>
+            <p class="copyright">Copyright &copy; Team Chat&nbsp;'til&nbsp;Late&nbsp;<span id="copyright"></span></p>
         </footer>
         <script src="assets/js/script.js" async></script>
+        <script src="assets/js/copyright-nav.js"></script>
     </body>
 </html>
