--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
         <main id="home" class="footer-allowance">
             <h1 class="readable-width text-center title">Bust IT: Cancer Without Borders</h1>
 
+            <section id="about-us" class="section-margin">
+                    <h2 id="about-us-title" class="title">About Us</h2>
+                    <article class="text-center">
+                        <p class="article-content">Bust IT: Cancer Without Borders is an organisation who are bringing awareness to the transgender community about breast cancer. </p>
+                        <p class="article-content">We aim to educate people on their risk factor for breast cancer and signpost to additional support and resources they may find useful.</p>
+                        <p class="article-content">Education is our main priority – we want everyone, regardless of gender to feel capable of performing a breast/chest check every month and to know the early warning signs of breast cancer.</p>
+                        <p class="article-content">We like to utilise the massive advances technology has made over the last few years allowing people to visualise the human form in a way that was previously impossible – this is perfect for people who are visual learners.</p>
+                        <p class="article-content">We provide an email reminder service to encourage people to check their breasts/chest every month – a key factor to spotting the early signs of breast cancer. </p>
+                </article>
+            </section>
+
             <section id="awareness" class="section-margin">
                 <h2 id="awareness-title">Awareness</h2>
 
