updates to resource page #22

--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
                 </model-viewer>
             </section>
 
-            <section id="resources-section">
-                <article id="resource" class="resources-grid">
-                    <h2 id="awareness-title">Resources</h2>
-                    <!-- I will change to a resource id -->
+            <section id="resources-section"  >
+                <article id="resource">
+                    <h2 class="section-title">Resources</h2>
                     <div class="resources-grid">
                         <div>
                             <h3>Have I got Breast Cancer?</h3>
