--- a/privacy.html
+++ b/privacy.html
@@ -120,7 +120,7 @@
 
             <section>
                 <h3>Contact Us</h3>
-                <p>If you have any questions about this Privacy Policy, please <a href="/index.html#contact">contact us</a>.</p>
+                <p>If you have any questions about this Privacy Policy, please <a href="index.html#contact-section">contact us</a>.</p>
             </section>
         </main>
 
