#30 wip: Style error pages

--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     </head>
 
-    <body class="footer-page">
+    <body class="footer-page error-background">
         <!--Header section-->
         <header>
             <div class="logo-spin">
@@ -65,11 +65,12 @@
         </header>
 
         <main class="footer-allowance readable-width">
-            <h1>
-                404 Error
-                <br>
-                This page does not exist.
-            </h1>
+            <div class="error-overlay">
+                <h1>404 Error: Page not found!</h1>
+                <h2>Oh no!!</h2>
+                <p>Unfortunately this means that this page either does not exist, or cannot be found.</p>
+                <p>Head back to safety using the navigation bar above.</p>
+            </div>
         </main>
 
         <script src="assets/js/copyright-nav.js"></script>
