--- a/500.html
+++ b/500.html
@@ -34,8 +34,8 @@
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     </head>
 
-    <body class="footer-page">
-        <!--Header section-->
+    <body class="footer-page error-background">
+        <!-- Header section -->
         <header>
             <div class="logo-spin">
                 <img src="assets/images/logo-cools.png" alt="Logo icon of all genders, rotating"></img>
@@ -65,11 +65,12 @@
         </header>
 
         <main class="footer-allowance readable-width">
-            <h1>
-                500 Error
-                <br>
-                Internal server error.
-            </h1>
+            <div class="error-overlay">
+                <h1>500 Error: Internal server error!</h1>
+                <h2>Oh no!!</h2>
+                <p>Unfortunately there has been an issue with our servers.</p>
+                <p>Head back to safety using the navigation bar above.</p>
+            </div>
         </main>
 
         <script src="assets/js/copyright-nav.js"></script>
