#20 fix: Fix image link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <p class="article-content">We like to utilise the massive advances technology has made over the last few years allowing people to visualise the human form in a way that was previously impossible – this is perfect for people who are visual learners.</p>
                     <p class="article-content">We provide an email reminder service to encourage people to check their breasts/chest every month – a key factor to spotting the early signs of breast cancer. </p>
                 </article>
-                <img src="/assets/images/group-of-people.jpg" alt="Stylised llustration of a group of people of various genders">
+                <img src="assets/images/group-of-people.jpg" alt="Stylised illustration of a group of people of various genders">
             </section>
 
             <section id="awareness-section" class="section-margin">
