#14 maint: Finish meta tags

--- a/accessibility.html
+++ b/accessibility.html
@@ -7,22 +7,22 @@
         <meta name="description" content="The Accessibility Policy for the Bust IT: Cancer Without Borders site. This page details all of the accessibility functionality available within this site.">
         <meta name="keywords" content="accessibility, a11y, policy, hackathon, breast, cancer, coding, code, institute">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="canonical" href="#">
+        <link rel="canonical" href="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/">
         <meta name="robots" content="index, follow">
         <title>Accessibility Policy</title>
         <!-- Facebook, LinkedIn, Google -->
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Bust IT: Cancer Without Borders Accessibility Policy" />
         <meta property="og:description" content="The Accessibility Policy for the Bust IT: Cancer Without Borders site. This page details all of the accessibility functionality available within this site." />
-        <meta name="image" property="og:image" content="assets/docs/imgs/finalsite.png" />
+        <meta name="image" property="og:image" content="assets/docs/finalsite.png" />
         <meta property="og:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices" />
-        <meta property="og:url" content="PERMALINK" />
+        <meta property="og:url" content="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/" />
         <meta property="og:site_name" content="Bust IT: Cancer Without Borders Accessibility Policy" />
         <!-- Twitter -->
         <meta name="twitter:card">
         <meta name="twitter:title" content="Bust IT: Cancer Without Borders Accessibility Policy">
         <meta name="twitter:description" content="The Accessibility Policy for the Bust IT: Cancer Without Borders site. This page details all of the accessibility functionality available within this site.">
-        <meta name="twitter:image" content="assets/docs/imgs/finalsite.png">
+        <meta name="twitter:image" content="assets/docs/finalsite.png">
         <meta name="twitter:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices">
         <!-- Local stylesheets -->
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
