--- a/404.html
+++ b/404.html
@@ -7,22 +7,22 @@
         <meta name="description" content="The 404 Page for the Bust IT: Cancer Without Borders site. Unfortunately this means that this page either does not exist, or cannot be found.">
         <meta name="keywords" content="404, error, hackathon, breast, cancer, coding, code, institute">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="canonical" href="#">
+        <link rel="canonical" href="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/">
         <meta name="robots" content="index, follow">
         <title>404 Error</title>
         <!-- Facebook, LinkedIn, Google -->
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Bust IT: Cancer Without Borders 404 Page" />
         <meta property="og:description" content="The 404 Page for the Bust IT: Cancer Without Borders site. Unfortunately this means that this page either does not exist, or cannot be found." />
-        <meta name="image" property="og:image" content="assets/docs/imgs/finalsite.png" />
+        <meta name="image" property="og:image" content="assets/docs/finalsite.png" />
         <meta property="og:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices" />
-        <meta property="og:url" content="PERMALINK" />
+        <meta property="og:url" content="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/" />
         <meta property="og:site_name" content="Bust IT: Cancer Without Borders" />
         <!-- Twitter -->
         <meta name="twitter:card">
         <meta name="twitter:title" content="Bust IT: Cancer Without Borders 404 Page">
         <meta name="twitter:description" content="The 404 Page for the Bust IT: Cancer Without Borders site. Unfortunately this means that this page either does not exist, or cannot be found.">
-        <meta name="twitter:image" content="assets/docs/imgs/finalsite.png">
+        <meta name="twitter:image" content="assets/docs/finalsite.png">
         <meta name="twitter:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices">
         <!-- Local stylesheets -->
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
