--- a/privacy.html
+++ b/privacy.html
@@ -14,7 +14,7 @@
         <meta property="og:type" content="article" />
         <meta property="og:title" content="Bust IT: Cancer Without Borders" />
         <meta property="og:description" content="The Privacy Policy for the Bust IT: Cancer Without Borders site. This page details what we do with your data, and how we keep your data secure." />
-        <meta name="image" property="og:image" content="assets/docs/imgs/finalsite.png" />
+        <meta name="image" property="og:image" content="assets/docs/finalsite.png" />
         <meta property="og:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices" />
         <meta property="og:url" content="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/" />
         <meta property="og:site_name" content="Bust IT: Cancer Without Borders" />
@@ -22,7 +22,7 @@
         <meta name="twitter:card">
         <meta name="twitter:title" content="Bust IT: Cancer Without Borders">
         <meta name="twitter:description" content="The Privacy Policy for the Bust IT: Cancer Without Borders site. This page details what we do with your data, and how we keep your data secure.">
-        <meta name="twitter:image" content="assets/docs/imgs/finalsite.png">
+        <meta name="twitter:image" content="assets/docs/finalsite.png">
         <meta name="twitter:image:alt" content="The Bust IT: Cancer Without Borders site on a range of devices">
         <!-- Local stylesheets -->
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
