Styled the resource <li> & grid

--- a/index.html
+++ b/index.html
@@ -167,38 +167,37 @@
             <section id="support-section"></section>
 
             <section id="resources-section">
-                <article id="resource" class="resources-grid">
-                    <h2 id="awareness-title">Resources</h2>
-                    <!-- I will change to a resource id -->
+                <article id="resource">
                     <div class="resources-grid">
+                        <h2 class="section-title text-center">Resources</h2>
                         <div>
-                            <h3>Have I got Breast Cancer?</h3>
-                            <ul>
-                                <li>Signs & Symptoms</li>
-                                <li>What to expect at appointments</li>
-                                <li>Benign breast conditions</li>
-                                <li>Breast cancer, genes and family history</li>
-                                <li>Transgender people and Breast cancer</li>
+                            <h2  class="text-center">Have I got Breast Cancer?</h2>
+                            <ul class="resource-lists">
+                                <li class="section-content"><a href="https://breastcancernow.org/about-us/news-personal-stories/transgender-people-breast-cancer" target="_blank" rel="noopener"> Transgender people & Breast cancer</a></li>
+                                <li class="section-content"><a href="https://preventbreastcancer.org.uk/about-breast-cancer/transgender-breast-awareness/" target="_blank" rel="noopener" > Signs & Symptoms</a></li>
+                                <li class="section-content"><a href="https://deannacarina.github.io/BCAwareness/index.html" target="_blank" rel="noopener" > The Breast Review</a></li>
+                                <li class="section-content"><a href="https://b-care-wit.herokuapp.com/" target="_blank" rel="noopener" > B-Care</a></li>
+                                <li class="section-content"><a href="https://positively-pink.herokuapp.com/home" target="_blank" rel="noopener"> Bosom Buddies</a></li>
                             </ul>
                         </div>
                     
                         <div>
-                            <h3>Diagnosed with Breast Cancer?</h3>
-                            <ul>
-                                <li>Cancer grades and sizes</li>
-                                <li>Prognosis</li>
-                                <li>Breast cancer, genes and family history</li>
-                                <li>Information for you</li>
+                            <h2 class="text-center">Diagnosed with Breast Cancer?</h2>
+                            <ul class="resource-lists">
+                                <li class="section-content"><a href="https://breastcancernow.org/information-support/facing-breast-cancer/diagnosed-breast-cancer" target="_blank" rel="noopener" > Cancer grades and sizes</a></li>
+                                <li class="section-content"><a href="https://breastcancernow.org/information-support/facing-breast-cancer/diagnosed-breast-cancer/prognosis" target="_blank" rel="noopener" > Prognosis</a></li>
+                                <li class="section-content"><a href="https://breastcancernow.org/information-support/have-i-got-breast-cancer/am-i-risk/breast-cancer-in-families" target="_blank" rel="noopener" > Breast cancer, genes & family history</a></li>
+                                <li class="section-content"><a href="https://breastcancernow.org/information-support/publications/download-order" target="_blank" rel="noopener"> Information for you</a></li>
                             </ul>
                         </div>
                     
                         <div>
-                            <h3>Survive and Thrive</h3>
-                            <ul>
-                                <li>Post treatment</li>
-                                <li>Positive Living</li>
-                                <li>Virtual Support Hub</li>
-                                <li>LGBTQI+ Cancer Support Resources</li>
+                            <h2  class="text-center">Survive and Thrive</h2>
+                            <ul class="resource-lists">
+                                <li class="section-content"><a href="https://breast-cancer-club.herokuapp.com/"> Breast Cancer Club</a></li>
+                                <li class="section-content"><a href="https://breastcancernow.org/information-support/facing-breast-cancer/living-beyond-breast-cancer/life-after-breast-cancer-treatment" target="_blank" rel="noopener"> Post treatment</a></li>
+                                <li class="section-content"><a href="https://breastcancernow.org/information-support/facing-breast-cancer/living-beyond-breast-cancer/life-after-breast-cancer-treatment" target="_blank" rel="noopener"> Positive Living</a></li>
+                                <li class="section-content"><a href="https://breastcancernow.org/information-support/facing-breast-cancer/living-beyond-breast-cancer/life-after-breast-cancer-treatment"target="_blank" rel="noopener"> Virtual Support Hub</a></li>
                             </ul>
                         </div>
                     </div>  
