#13 ref: Update Twitter card meta

--- a/500.html
+++ b/500.html
@@ -19,7 +19,7 @@
         <meta property="og:url" content="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/" />
         <meta property="og:site_name" content="Bust IT: Cancer Without Borders" />
         <!-- Twitter -->
-        <meta name="twitter:card">
+        <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Bust IT: Cancer Without Borders 500 Page">
         <meta name="twitter:description" content="The 500 Page for the Bust IT: Cancer Without Borders site. Unfortunately, this means that something has gone wrong with the server.">
         <meta name="twitter:image" content="assets/docs/finalsite.png">
