--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,7 @@
         <meta property="og:url" content="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/" />
         <meta property="og:site_name" content="Bust IT: Cancer Without Borders" />
         <!-- Twitter -->
-        <meta name="twitter:card">
+        <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Bust IT: Cancer Without Borders">
         <meta name="twitter:description" content="The Privacy Policy for the Bust IT: Cancer Without Borders site. This page details what we do with your data, and how we keep your data secure.">
         <meta name="twitter:image" content="assets/docs/finalsite.png">
