--- a/accessibility.html
+++ b/accessibility.html
@@ -19,7 +19,7 @@
         <meta property="og:url" content="https://vanessacleary.github.io/W-I-T-IT-LAB-Breast-Cancer-Awareness/" />
         <meta property="og:site_name" content="Bust IT: Cancer Without Borders Accessibility Policy" />
         <!-- Twitter -->
-        <meta name="twitter:card">
+        <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Bust IT: Cancer Without Borders Accessibility Policy">
         <meta name="twitter:description" content="The Accessibility Policy for the Bust IT: Cancer Without Borders site. This page details all of the accessibility functionality available within this site.">
         <meta name="twitter:image" content="assets/docs/finalsite.png">
